--- a/src/www/less/site.less
+++ b/src/www/less/site.less
@@ -99,6 +99,18 @@ input.form-control {
     height: 70px;
 }
 
+.advanced-filters {
+    display: flex;
+    flex-flow: row wrap;
+}
+.filter-group.filters-advanced {
+    padding: 7px;
+}
+.filter-button-group {
+    display: flex;
+    flex-flow: row wrap;
+}
+
 
 .card {
     padding: 2px;
