--- a/src/www/less/site.less
+++ b/src/www/less/site.less
@@ -160,10 +160,11 @@ input.form-control {
     }
 
     &-container {
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: flex-start;
-        align-items: flex-start;
+            display: flex;
+            flex-flow: column wrap;
+            justify-content: flex-start;
+            align-items: flex-start;
+            max-height: 65259px;
 
         &[data-card-size=sm] {
             .card {
